# mlops

./: pyproject.toml
src/: main.py
