[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["jihan <111396812+gihankhalil1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
